# HashEndra

./: Cargo.toml  README.md  install.sh
src/: lib.rs  main.rs
src/core/: cryptanalysis.rs  mod.rs  patterns.rs  recursive_engine.rs  scanner.rs
src/detectors/: ciphers.rs  classic_ciphers.rs  encodings.rs  hashes.rs  mod.rs  stego.rs
src/utils/: io_manager.rs  mod.rs
tests/: integration_tests.rs
