[package]
name = "hashendra"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
rayon = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
lazy_static = "1"
memmap2 = "0.7"
walkdir = "2"
num-bigint = "0.4"
itertools = "0.13"
hex = "0.4"
